--- a/backend_fashion/.env
+++ b/backend_fashion/.env
@@ -1,6 +1,8 @@
-PORT=3000
+PORT=3001
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=123456
-DB_NAME=db_fashion
+DB_NAME=bd_fashion
+
+
