--- a/backend_fashion/.env
+++ b/backend_fashion/.env
@@ -1,8 +1,10 @@
-PORT=3001
+PORT=3000
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=123456
 DB_NAME=bd_fashion
+
+DEFAULT_PASSWORD=123456
 
 
