--- a/frontend_tienda_ropa/package.json
+++ b/frontend_tienda_ropa/package.json
@@ -15,20 +15,32 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@popperjs/core": "^2.11.8",
     "@primevue/themes": "^4.3.5",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "daterangepicker": "^3.1.0",
+    "jquery": "^3.7.1",
+    "magnific-popup": "^1.2.0",
+    "moment": "^2.30.1",
+    "perfect-scrollbar": "^1.5.6",
     "pinia": "^3.0.1",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.5",
+    "select2": "^4.1.0-rc.0",
+    "slick-carousel": "^1.8.1",
+    "sweetalert": "^2.1.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
-    "@types/node": "^22.14.0",
+    "@types/jquery": "^3.5.32",
+    "@types/moment": "^2.11.29",
+    "@types/node": "^22.15.33",
+    "@types/select2": "^4.0.63",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitejs/plugin-vue-jsx": "^4.1.2",
     "@vue/eslint-config-prettier": "^10.2.0",
